# rddl-tropic01-esp32

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/libtropic/: CMakeLists.txt
components/libtropic/hal/port/ESP32/: lt_port_esp32.c
components/libtropic/include/: lt_hmac.h
components/libtropic/src/: lt_hkdf.c
main/: CMakeLists.txt  keys.h  tropic_full.c
